# ChannelMap

./: CMakeLists.txt  ChannelMapGenerator.cpp  ChannelMap_ru_RU.ts  main.cpp  test.cpp
include/: ChannelMap.h  mainwindow.h  savemap.h
src/: ChannelMapGenerator.cxx  mainwindow.cpp  mainwindow.ui  mainwindow.ui.autosave  savemap.cpp  savemap.ui  test.cxx
